--- a/Backend/appsettings.Development.json
+++ b/Backend/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },  
   "ConnectionStrings": {
-    "Default": "Host=localhost;Port=5432;Database=spaapp-db;Username=postgres;Password=password"
+    "Default": "Host=localhost;Port=5432;Database=spaapp-db;Username=postgres;Password=parool"
   }   
 }
